# dlt_demo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
dlt_demo/: dlt_demo.py
dlt_demo/ingestion/: worker_bronze.py
dlt_demo/tests/: dlt_tests.py
dlt_demo/transformations/: dlt_demo.py
dlt_demo/utils/: create_dab_yaml.py  create_mock_data.py  upload_data.py
templates/: databricks.yaml.j2
terraform/: main.tf  variables.tf
terraform/modules/public_bucket_aws/: output.tf  public_bucket_aws.tf  variables.tf
