[project]
name = "dlt-demo"
version = "0.0.1"
description = "A demo project for testing DLT"
authors = ["Viktor Herdinai"]

dependencies = [
    'boto3 ~= 1.34.138',
    'jinja2 ~= 3.1.4',
    'python-dotenv ~= 1.0.1',
]

[project.extras]
dev = ["pytest", "pytest-cov", "flake8", "black", "isort", "mypy"]
