[project]
name = "dlt-demo"
version = "0.0.1"
description = "A demo project for testing DLT"
authors = [{name = "Viktor Herdinai"}]

dependencies = [
    'boto3 ~= 1.34.138',
    'jinja2 ~= 3.1.4',
    'python-dotenv ~= 1.0.1',
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "flake8", "black", "isort", "mypy"]

[tool.setuptools.packages.find]
where = ["dlt_demo"]
